--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,22 @@
 ---
 title: Introduction
-description: "Welcome to the home of your new documentation"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+Welcome to my portfolio! I'm Abby, and I've been a technical writer for 5+ years. This is a showcase of some of my best work, such as product documentation and API specs, as well as some personal blog posts. 
 
-## Setting up
-
-The first step to world-class documentation is setting up your editing environments.
+If you're ever interested in talking, feel free to connect with me on LinkedIn or email me!
 
 <CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
+  <Card title="Product documentation" icon="square-1" href="/product-documentation">
+    Tutorials, how-to guides, and reference documentation.
   </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
+  <Card title="Developer documentation" icon="square-2" href="/api-reference">
+    API references and technical installation guides.
   </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
+  <Card title="Resume" icon="square-3" href="/resume">
+    Where I've been so far.
   </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
+  <Card title="Blog" icon="square-4" href="/blog">
+    What I've  been up to.
   </Card>
 </CardGroup>
