--- a/resume/resume.mdx
+++ b/resume/resume.mdx
@@ -3,11 +3,9 @@ title: Resume
 description: Where I've been
 ---
 
-## Work experience
-
-### HUMAN Security
-
-**Technical Writer, May 2024-Present**
+# Work experience
+<Update label="HUMAN Security" description="May 2024 - Present">
+### Technical writer
 * HUMAN is a cybersecurity defense platform against bot attacks, digital fraud, and abuse
 * Joined as a foundational role in Technical Writing, establishing documentation processes in close collaboration with Research & Development to product high-quality product, developer, and API documentation
 * Contributed to documentation in a docs-as-code workflow, levering source control, pull requests and review, and automated checks
@@ -20,10 +18,9 @@ description: Where I've been
     * Updated and tested the most-used developer installation guides for HUMAN Enforcers, which are SDKs installed on a CDN or mobile environment
     * Converted text and table-based API documentation into OpenAPI 3.0 format for a more dynamic and interactive user experience
     * Optimized SEO health by updating title tags, article metadata, and permanent redirects, as well as auditing the product for expired links
-
-### GRIN
-
-**Senior Technical Product Writer, July 2021-April 2024**
+</Update>
+<Update label="GRIN" description="Jul. 2021 - Apr. 2024">
+### Senior Technical Writer
 
 * Drafted, revised, edited, and published all product-related documentation for 8 Product and Engineering pods, including in-app messaging, product announcements, release notes, UX writing, internal documentation, and customer documentation
 * Coordinated with cross-functional teams and stakeholders to deliver documentation, including Product Management, Product Marketing, Product Design, Engineering, Customer Education, Customer Success, and Technical Success Engineering
@@ -39,19 +36,17 @@ description: Where I've been
     * Auditing Support tickets to identify common documentation dropoff points and remedying these pitfalls 
     * Researching, implementing, and leveraging Google Analytics to track reader patterns and inform documentation priorities
     * Researching, defining, and leading customer interviews to test the knowledge base site&#39;s information architecture and uncover gaps in documentation
-
-### Carnegie Mellon University
-
-**Teaching Assistant, August 2020-May 2021**
+</Update>
+<Update label="Carnegie Mellon University" description="Aug. 2020 - May 2021">
+### Teaching Assistant
 * Educated students on fundamental writing concepts such as style, rhetorical practices, and user-oriented design
 * Emphasized empathy with the audience and to explicitly state why their fields should matter to readers 
 * Reviewed resumes, cover letters, personal statements, funding proposals, science communication, client reports, and instructional articles 
 * Collaborated directly with students and professor in peer-review sessions and discussion 
 * Held office hours and advised students one-on-one weekly
-
-### Two Six Labs
-
-**Junior Technical Writer, June 2018-July 2020**
+</Update>
+<Update label="Two Six Labs" description="Jun. 2018 - Jul. 2020">
+### Junior Technical Writer
 * Reviewed funding proposals submitted to the Department of Defense (DoD) and the Defense Advanced Research Projects Agency (DARPA)
 * Participated in daily standups and sprints with the development teams
 * Reviewed, published, and maintained user documentation for products for each feature update
@@ -60,12 +55,7 @@ description: Where I've been
 * Drafted, reviewed, and submitted two full final reports on completed contracts
 * Drafted and published Two Six Labs' first company privacy policy
 * Designed and maintained company marketing collateral, including flyers, recruiting cards, and newsletters
-
-## Contributions
-
-* [help.grin.co](https://help.grin.co/)
-* [api.grin.co](https://api.grin.co/docs/v2/)
-* [docs.humansecurity.com](https://docs.humansecurity.com/)
+</Update>
 
 ## Skills and Tools
 
