--- a/product-documentation/about-attack-profiles.mdx
+++ b/product-documentation/about-attack-profiles.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'About Attack Profiles'
+description: "An article describing what Attack Profiles are and why they're useful"
 ---
 
 <Accordion title="Why I included this article">This article explains what **Attack Profiles** are, which were a new feature related to HUMAN's **Sightline Dashboard** update. Essentially, these Profiles were a result of machine-learning models that took activity from millions of individual bots on an application and, after finding common behaviors among them, created a "profile" of the attacker behind the bots.<br /><br />
