--- a/product-documentation/understanding-sightline-dashboard-activity.mdx
+++ b/product-documentation/understanding-sightline-dashboard-activity.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Understanding Sightline Dashboard activity'
+description: "An article describing how to use and interpret data from the Sightline Dashboard"
 ---
 
 <Accordion title="Why I included this article">
