--- a/resume/resume.mdx
+++ b/resume/resume.mdx
@@ -3,13 +3,13 @@ title: Resume
 description: Where I've been
 ---
 
-# Work experience
 <Update label="HUMAN Security" description="May 2024 - Present">
 ### Technical writer
 * HUMAN is a cybersecurity defense platform against bot attacks, digital fraud, and abuse
 * Joined as a foundational role in Technical Writing, establishing documentation processes in close collaboration with Research & Development to product high-quality product, developer, and API documentation
 * Contributed to documentation in a docs-as-code workflow, levering source control, pull requests and review, and automated checks
 * Assessed significant customer pain points and refreshed onboarding documentation, prioritizing technical installation guides relevant for 90% of customers in collaboration with Engineering, Solutions Architecture, and Solutions Engineering
+* Established monthly docs feedback sessions with Solutions Engineers to learn about common pain points and opportunities to improve the documentation experience for users
 * Planned, executed, and delivered multiple technical writing projects, including: 
     * Established Technical Writing policies and procedures for change requests, prioritization, and contribution
     * Standardized the breadth of information to include in documentation in collaboration with the Security and Product teams
@@ -18,6 +18,9 @@ description: Where I've been
     * Updated and tested the most-used developer installation guides for HUMAN Enforcers, which are SDKs installed on a CDN or mobile environment
     * Converted text and table-based API documentation into OpenAPI 3.0 format for a more dynamic and interactive user experience
     * Optimized SEO health by updating title tags, article metadata, and permanent redirects, as well as auditing the product for expired links
+    * Refreshed and repurposed outdated style guide to standardize documentation.
+    * Led full documentation refresh, including updating information architecture, restructuring existing articles, and filling knowledge gaps, for owned product suite 
+    * Collaborated with Product, Product Operations, and Engineering to publish recurring product release notes to customers 
 </Update>
 <Update label="GRIN" description="Jul. 2021 - Apr. 2024">
 ### Senior Technical Writer
@@ -57,11 +60,13 @@ description: Where I've been
 * Designed and maintained company marketing collateral, including flyers, recruiting cards, and newsletters
 </Update>
 
-## Skills and Tools
+## Skills
 
-**Skills:** Agile methodologies, Markdown, MDX, YAML, OpenAPI Specification, CSS, HTML, Python, R, reStructuredText, XML, docs-as-code, project management, API documentation, how-to articles
+Agile methodologies, Markdown, MDX, YAML, OpenAPI Specification, CSS, HTML, Python, R, reStructuredText, XML, docs-as-code, project management, API documentation, how-to articles
 
-**Tools:** 	Jira, Confluence, Git, GitHub, Guru, Document360, Zendesk, Docusaurus, Sphinx, ReadMe, Mintlify, Visual Studio Code, Sublime Text, Brackets, Intercom, Announcekit, Dovetail, Pendo, InVision, Snagit, Figma, Canva, Adobe Photoshop, Adobe InDesign, Clari Copilot, Loom, Slack, Zoom, Google Suite
+## Tools
+
+Jira, Confluence, Git, GitHub, Guru, Document360, Zendesk, Docusaurus, Sphinx, ReadMe, Mintlify, Visual Studio Code, Sublime Text, Brackets, Intercom, Announcekit, Dovetail, Pendo, InVision, Snagit, Figma, Canva, Adobe Photoshop, Adobe InDesign, Clari Copilot, Loom, Slack, Zoom, Google Suite
 
 ## Certifications
 
@@ -77,5 +82,5 @@ description: Where I've been
 
 ## Education
 
-* **Master of Arts, Professional Writing** <br />*Carnegie Mellon University, August 2020-May 2021* 
-* **Bachelor of Science, Technical Writing and Communication** <br />*Carnegie Mellon University, August 2014-May 2018* 
+* **Master of Arts, Professional Writing** <br />Carnegie Mellon University, Aug. 2020 - May 2021
+* **Bachelor of Science, Technical Writing and Communication** <br />Carnegie Mellon University, Aug. 2014 - May 2018
