--- a/introduction.mdx
+++ b/introduction.mdx
@@ -14,9 +14,9 @@ If you're ever interested in talking, feel free to connect with me on LinkedIn o
     API references and technical installation guides.
   </Card>
   <Card title="Resume" icon="square-3" href="/resume">
-    Where I've been so far.
+    Where I've been.
   </Card>
   <Card title="Blog" icon="square-4" href="/blog">
-    What I've  been up to.
+    What I'm up to.
   </Card>
 </CardGroup>
