--- a/changelog.mdx
+++ b/changelog.mdx
@@ -2,4 +2,10 @@
 ## New and improved portfolio
 
 - Migrated portfolio from Docusaurus to Mintlify
+- Added new samples:
+    - [Understanding Sightline Dashboard activity](/product-documentation/understanding-sightline-dashboard-activity)
+    - [About Attack Profiles](/product-documentation/about-attack-profiles)
+    - [Create custom policy rules](/product-documentation/create-custom-policy-rules)
+    - [Authentication](/api-reference/authentication)
+    - [Custom rules API](/api-reference/custom-rules/custom-rules-context)
 </Update>
