finishing docs samples

--- a/product-documentation/create-custom-policy-rules.mdx
+++ b/product-documentation/create-custom-policy-rules.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Create custom policy rules'
-description: An article instructing how to manually submit content for brands
+description: 'An article describing how to create policy rules using logical operators'
 ---
 
 <Accordion title="Why I included this article">This article describes how to create a policy rule in Bot Defender. A policy rule tells Bot Defender what type of bot activity to look out for and, when it finds bots that matches that, what to do with the bot that's doing it. To create a rule, users needed to use truth functions like AND or OR to set up conditions and actions.<br /><br />It turned out that many of our users were unfamiliar with truth functions, but they had to still use this feature to properly guard their applications. To make things even more complicated, the conditions could be nested and grouped together. I included this article because it showcases a fairly complicated procedure to create a rule as well as includes an explanation with an example rule to help explain how truth functions could be applied.<br /><br />I was the primary contributor to this article, but collaborated closely with Product while finalizing the content. This article is [publicly available](https://docs.humansecurity.com/applications-and-accounts/docs/bot-defender-create-custom-policy-rules) today, so I did not redact anything from the sample.</Accordion>
