--- a/product-documentation/understanding-first-party-data.mdx
+++ b/product-documentation/understanding-first-party-data.mdx
@@ -3,15 +3,7 @@ title: Understanding first-party data
 description: An article describing what first-party data is and why it's beneficial for users
 ---
 
-## About this article
-
-A conceptual article explaining what first-party data is and how it was used to an influencer’s benefit when they connected their social network accounts to the company, referred to as Acme. It was assumed that most content creators were not familiar with first-party data at all, and that they were cautious about giving away first-party data because they didn’t know what that entailed. This article aimed to demystify first-party data and convince influencers they should give first-party permissions to Acme.
-
-This article was challenging because, while it was important to the business to have information about first-party data readily available, it is an intimidating concept for most readers. Many users value their data privacy and often want to know how their data is being used. In this case, not only did I need to explain what it meant to share first-party data, but I needed to encourage influencers to do so, as they needed to connect their social network accounts for their collaborating brands to see their engagement rates and other profile statistics.
-
-Certain identifying information about the company, as well as certain product information, has been redacted from this article.
-
-<hr></hr>
+<Accordion title="Why I included this article">A conceptual article explaining what first-party data is and how it was used to an influencer’s benefit when they connected their social network accounts to the company, referred to as Acme. It was assumed that most content creators were not familiar with first-party data at all, and that they were cautious about giving away first-party data because they didn’t know what that entailed. This article aimed to demystify first-party data and convince influencers they should give first-party permissions to Acme.<br /><br />This article was challenging because, while it was important to the business to have information about first-party data readily available, it is an intimidating concept for most readers. Many users value their data privacy and often want to know how their data is being used. In this case, not only did I need to explain what it meant to share first-party data, but I needed to encourage influencers to do so, as they needed to connect their social network accounts for their collaborating brands to see their engagement rates and other profile statistics.<br /><br />Certain identifying information about the company, as well as certain product information, has been redacted from this article.</Accordion>
 
 ## Understanding first-party data
 
