--- a/product-documentation/manually-uploading-content.mdx
+++ b/product-documentation/manually-uploading-content.mdx
@@ -3,26 +3,17 @@ title: Manually uploading content
 description: An article instructing how to manually submit content for brands
 ---
 
-## About this article
-
-A procedural article describing how creators can submit their social media content through their personal portal, the Live Site, to brands they are collaborating with. This article assumed these influencers had experience working with brands as well as some previous knowledge about the Live Site’s features and functionality.
-
-I included this article because while the task by itself, which is to upload files to a site, may seem easy, there were many prerequisites and choices a creator needed to make to complete their task correctly. This presented a challenge when writing this article.
-
-This article is available publicly, so nothing has been redacted in the sample. You can view the current version [on their site.](https://help.grin.co/docs/manually-uploading-content)
-
-<hr></hr>
+<Accordion title="Why I included this article">A procedural article describing how creators can submit their social media content through their personal portal, the Live Site, to brands they are collaborating with. This article assumed these influencers had experience working with brands as well as some previous knowledge about the Live Site’s features and functionality.<br /><br />I included this article because while the task by itself, which is to upload files to a site, may seem easy, there were many prerequisites and choices a creator needed to make to complete their task correctly. This presented a challenge when writing this article.<br /><br />This article is available publicly, so nothing has been redacted in the sample. You can view the current version [on their site.](https://help.grin.co/docs/manually-uploading-content)</Accordion>
 
 ## Manually uploading content
 
 If you’ve been assigned non-network tasks or you haven’t connected your social networks, you can complete tasks with collaborating brands by manually uploading content via your Live Site. When you manually upload, you have to provide a combination of a file copy of your content, a link, and the metrics associated with your content depending on the type of task you’re completing.
 
-:::warning[Note]
-
+<Warning>
 * Some social network uploads, such as Instagram Stories, must be captured before they expire.
 * Manually uploading content can be time consuming and potentially inaccurate for delivering social network tasks (such as Instagram or TikTok) as your content metrics change. This may affect how your collaborating brands perceive your content’s performance. To ensure you always share your content with the most up-to-date stats, we **highly recommend** connecting your social accounts with GRIN. This allows GRIN to automatically pull your content and metrics directly from your accounts and share that data directly with your collaborating brands.
 * You can learn how to connect your social networks with our help articles in [Managing Social Networks.](https://help.grin.co/v1/docs/managing-social-networks) For more information on how GRIN uses your data, you can check out our help articles [Creator Data Privacy](https://help.grin.co/v1/docs/creator-data-privacy) and [Understanding First-Party Data.](https://help.grin.co/v1/docs/understanding-first-party-data)
-:::
+</Warning>
 
 ### What you’ll need
 
