--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,8 +1,9 @@
 ---
 title: Introduction
+description: Welcome to my portfolio!
 ---
 
-Welcome to my portfolio! I'm Abby, and I've been a technical writer for 5+ years. This is a showcase of some of my best work, such as product documentation and API specs, as well as some personal blog posts. 
+Hi! I'm Abby, and I've been a technical writer for 5+ years. This is a showcase of some of my best work, such as product documentation and API specs, as well as some personal blog posts. 
 
 If you're ever interested in talking, feel free to connect with me on LinkedIn or email me!
 
