--- a/resume/about-me.mdx
+++ b/resume/about-me.mdx
@@ -2,3 +2,22 @@
 title: 'About me'
 description: 'I talk about myself'
 ---
+
+## Quick facts
+
+* **Located:** D.C. Metro area
+* **Hometown:** Cleveland
+* **Dogs or cats:** Dogs
+* **Favorite flavor:** Matcha
+* **Instruments:** Piano and viola
+* **Games:** FFXIV, League of Legends, Pokemon
+
+## Rambly facts
+
+I started out as a science nerd and originally went to school for physics&mdash;mostly because I didn't know what else to do. As it turned out, I was not that good at physics, so while searching around my university's degree programs for a change, I came across this thing called "technical writing", and the rest is history.
+
+Technical writing always fit me very well. My thing was that I always liked explaining my latest, coolest obsession to my friends so they could also understand how cool and definitely not nerdy it was. What I really liked was the moment the lightbulb went off in their eyes. It made me feel accomplished, because not only was I sharing something with them that they liked, but because it confirmed with me that I understood it well enough to explain it. Add in the fact that I was always better at writing than at science, and it's no wonder I really took to tech writing. 
+
+I've been doing that for a little more than five years now, and I've really enjoyed it! I'm learning something new every day, which is all I can ask for. 
+
+<Frame><img src="/images/headshot.jpg" width="350" /></Frame>
