--- a/blog/2025/tech-misnomer.mdx
+++ b/blog/2025/tech-misnomer.mdx
@@ -15,4 +15,11 @@ So, when my manager&mdash;who had never managed a technical writer, much less a 
 
 ...And it was only resumes. And when I looked at them, there weren't any obvious links to portfolios either. Now, resumes are important, but I think many technical writers would agree that some demonstration of your writing ability in the form of a portfolio is equally important. I personally don't like judging So, I went back to my manager, hoping it was a mistake and he just forgot to give them to me. 
 
-Unfortunately, he didn't forget. Actually, they hadn't been asking for them in the application process. 
+Unfortunately, he didn't forget. Actually, they hadn't been asking for them in the application process. Cue internal screaming. 
+
+Once I found that out, I sat down with my manager and really told him my opinion on how they should conduct the interview process&mdash;not necessarily with me directly embedded into it, but at least keep a few things in mind.
+
+* Resumes aren't enough for technical writing applications. We need examples of each person's writing to see if they'll be a good fit. 
+* Good technical writers don't need to be industry experts. Instead, they need to know the right questions to ask. 
+
+Thankfully, he took this to heart, and a few days later, he started passing on different portfolios of work from applicants. There was also a distinct difference in how he was observing each applicant and their work. For example, one of the applicants sent a link to a knowledge base they'd put together from scratch. This was impressive, but 
