--- a/blog/2025/tech-misnomer.mdx
+++ b/blog/2025/tech-misnomer.mdx
@@ -22,4 +22,14 @@ Once I found that out, I sat down with my manager and really told him my opinion
 * Resumes aren't enough for technical writing applications. We need examples of each person's writing to see if they'll be a good fit. 
 * Good technical writers don't need to be industry experts. Instead, they need to know the right questions to ask. 
 
-Thankfully, he took this to heart, and a few days later, he started passing on different portfolios of work from applicants. There was also a distinct difference in how he was observing each applicant and their work. For example, one of the applicants sent a link to a knowledge base they'd put together from scratch. This was impressive, but 
+Thankfully, he took this to heart, and a few days later, he started passing on different portfolios of work from applicants. There was also a distinct difference in how he was observing each applicant and their work. For example, one of the applicants sent a link to a knowledge base they'd put together from scratch. This was impressive, but there was something about the content that, while my manager couldn't put his finger on it, he was unsure about it for some reason. 
+
+After taking a look at it myself, it was clear to me that he was probably noticing that, while the articles were written well and didn't break any English rules, the way they were written were hard to read, even for an expert audience. There was a lot of superfluous information at the beginning of the article, not a lot of obvious goals, and the actual procedures for some articles didn't start until the last third of the page. As a technical writer, I knew that these were things that make it harder for readers to actually get through an article, and my manager as a non-writer also sensed that, even though he couldn't put it into words. 
+
+After I explained these reasons to him, I think he really understood what I meant by my earlier points. Just because you're an expert and you happen to write pretty well doesn't mean you're a great technical writer automatically. It was clear, for example, that this candidate was very technical and knew a lot about software development, but there were aspects of his writing that he could've improved by putting the user first. 
+
+After this, he went back to the recruiter and relayed what I told him&mdash;and even better, they looped me into the screening process so they could make sure they were doing it right. But honestly, they probably didn't need me; they took my feedback really well and started picking out some really solid candidates, regardless of their specific expertise in our team's industry. 
+
+Eventually, we ended up hiring a great second tech writer, and at the end of it, my manager thanked me for voicing my opinion and changing his views. He willingly admitted he didn't know a lot about technical writing, so he said that what I shared was really helpful and something he could keep in mind for the future. So all in all, a positive experience! 
+
+So to sum it up: don't let the "technical" part of the Technical Writer title fool you&mdash;some of the best technical writers **aren't** experts in their own right. What makes a tech writer great is not their depth of knowledge in a subject, but their ability to learn and ask enough questions to learn **just enough** to explain it to your users. Don't make this mistake and accidentally turn away great tech writers from your door! 
