--- a/blog/2025/tech-misnomer.mdx
+++ b/blog/2025/tech-misnomer.mdx
@@ -1,15 +1,26 @@
 ---
-title: "The 'technical' writer misnomer"
+title: "The 'technical' writer technicality"
 description: 'DATE DATE DATE'
 ---
 
-Before the new year, I helped our team hire a second technical writer. Based on the hiring process and questions I received during my interview process for the first technical writer role, I knew that I had to be involved in this one!
+Recently, I got involved with hiring a second technical writer for our product team. Unfortunately, when I jumped in, I found that my company fell prey to something I think is common for non-tech writers: they assumed that a technical writer needs to be an expert in the field they're writing in. Thankfully, I came in and convinced my manager that it didn't have to be that way.
 
-My company fell prey to what a lot of non-tech writers fall prey to: assuming that a technical writer needs to be an expert in the field. Typically, I've found that whenever I interview for lone writer or solo writer positions, I'm being interviewed by people that don't know anything about technical writing. So, they end up asking me about the industry instead, and how much experience I have about their industry. I usually have to spend time convincing them that, even if they don't hire me, they shouldn't necessarily hire a tech writer based on industry knowledge. That's what a SME is for! Instead, they should consider it more like a customer success role: what would you bring to the user experience? 
+## Technically, we don't have to be..."technical"
 
-Indeed, if technical writing was primarily about being an expert in the industry, then any SME would likely be qualified to be a technical writer. And don't get me wrong&mdash;having experience in the field you're writing in can help! But believing that's a prerequisite is incorrect thinking. I personally didn't know much about either industry I've worked in so far (influencer marketing and cybersecurity&mdash;super closely related, I know), but I believe this only helped me. This is because the audiences for the documentation **also** were non-experts, which meant that starting on their level helped me see their perspective. 
+I think a lot of tech writers have encountered this misconception that we need to be industry experts first and writers second&mdash;I know I have, especially for smaller teams! Typically, whenever I interview for solo writer positions, my interviewers ask how much I know about their industry. I usually have to spend time convincing them that, even if they don't hire me, they shouldn't necessarily hire a tech writer based on industry knowledge&mdash;that's what SMEs are for! Instead, they should consider it more like a customer success role and ask me something like: what would you bring to our users' experiences? 
 
-I think this is the pitfall of having an expert write the documentation: they forget what the user doesn't know because they know so much&mdash;as they should! The SME's entire job is to know their area inside and out. But the deeper you go, the farther from the start you are, and the less you remember of what it was like to be a beginner&mdash;or worse, a frustrated, annoyed individual who's reading the docs just to get a task done and **not** because they genuinely want to learn about machine-learning models.
+Honestly, if technical writing was primarily about being an expert in the industry, then any SME would likely be qualified to be a technical writer. The SME's entire job is to know their area inside and out, but the deeper you go, the farther from the start you are, and the less you remember of what it was like to be a beginner&mdash;or worse, a frustrated, annoyed individual who's reading the docs just to get a task done and **not** because they genuinely want to learn about how the backend architecture of our app is actually structured or something. 
+
+Now, don't get me wrong&mdash;having experience in the field you're writing in can definitely help, especially if you're writing for other experts. But believing that's a hard prerequisite for **all** tech writing roles is wrong. I personally didn't know much about either industry I've worked in (influencer marketing and cybersecurity&mdash;super closely related, I know), but I believe this only helped me. This is because the audiences for the documentation **also** were non-experts, which meant that starting on their level helped me write for **their** perspective&mdash;and ultimately, the user is key! 
+
+## A bumpy start
+
+I apparently did well convincing my interview panel that tech writers didn't need to be experts, because I got a new role in a new industry that was mostly unfamiliar. Unfortunately, 
+
+## Promising improvements
+
+## Happy endings
+
 
 So, when my manager&mdash;who had never managed a technical writer, much less a team of them, before me&mdash;mentioned he was going to start the process to hire a second tech writer, I told him I would be happy to participate if he'd let me. I knew I'd be part of the interview panel, but I wasn't initially part of the screening process&mdash;something I was keen on getting in on because I was worried my colleagues might accidentally reject someone based on incorrect assumptions. Unfortunately, I wasn't involved at the very start, but thankfully, my manager could sense something was amiss, because he started sending me resumes of some of the candidates that made it through the recruiter. 
 
