--- a/blog/2025/tech-misnomer.mdx
+++ b/blog/2025/tech-misnomer.mdx
@@ -5,7 +5,7 @@ description: 'DATE DATE DATE'
 
 Recently, I got involved with hiring a second technical writer for our product team. Unfortunately, when I jumped in, I found that my company fell prey to something I think is common for non-tech writers: they assumed that a technical writer needs to be an expert in the field they're writing in. Thankfully, I came in and convinced my manager that it didn't have to be that way.
 
-## Technically, we don't have to be..."technical"
+## Technically, we don't have to be "technical"
 
 I think a lot of tech writers have encountered this misconception that we need to be industry experts first and writers second&mdash;I know I have, especially for smaller teams! Typically, whenever I interview for solo writer positions, my interviewers ask how much I know about their industry. I usually have to spend time convincing them that, even if they don't hire me, they shouldn't necessarily hire a tech writer based on industry knowledge&mdash;that's what SMEs are for! Instead, they should consider it more like a customer success role and ask me something like: what would you bring to our users' experiences? 
 
@@ -15,14 +15,24 @@ Now, don't get me wrong&mdash;having experience in the field you're writing in c
 
 ## A bumpy start
 
-I apparently did well convincing my interview panel that tech writers didn't need to be experts, because I got a new role in a new industry that was mostly unfamiliar. Unfortunately, 
+I apparently did well convincing my interview panel that tech writers didn't need to be experts, because I got a new role in a new industry that was mostly unfamiliar. Unfortunately, I lost some of the work I did with those individuals because I ended up getting a new manager from outside that panel. This manager had never managed a technical writer before me, so I ended up teaching him quite a bit about it. I didn't mind doing this, and I was actually used to it, but it did mean he didn't know what to look for in technical writing candidates. 
+
+From the start, I knew I'd be part of the interview panel, but I wasn't initially part of the screening process. I really wanted to get involved because I was worried we might turn away potential candidates on misplaced assumptions. Still, I was relatively new myself&mdash;I hadn't even been at the company a year yet&mdash;so I tread lightly and simply asked for regular updates on how the search was going. 
+
+Luckily, while he wasn't a tech writing expert, my manager had good instincts. Based on the candidates that made it to him, he could sense something was amiss with the process. He started sending me resumes to get my opinion ahead of scheduling any interviews. 
+
+I remember that, when I got the first resume, it looked like it was someone with a heavy technical background. The resume's format was also inconsistent and there were some small grammar mistakes. Still, I didn't want to reject someone from a writer role just for those&mdash;like I said earlier, having technical expertise can help&mdash;so I asked to see this person's portfolio too. After all, it's hard to judge someone's for a writing position without seeing their past work. 
+
+"Great point," my manager replied to me. "I'll ask if this person sent one." 
+
+"Great 😁," I Slacked back, internally screaming. Did that mean we hadn't been asking for portfolios as part of the application?
+
+Unfortunately, yes, that's what it meant. And we hadn't planned to have a writing exercise portion either, which I think is an acceptable replacement (better than nothing, at least). 
 
 ## Promising improvements
 
 ## Happy endings
 
-
-So, when my manager&mdash;who had never managed a technical writer, much less a team of them, before me&mdash;mentioned he was going to start the process to hire a second tech writer, I told him I would be happy to participate if he'd let me. I knew I'd be part of the interview panel, but I wasn't initially part of the screening process&mdash;something I was keen on getting in on because I was worried my colleagues might accidentally reject someone based on incorrect assumptions. Unfortunately, I wasn't involved at the very start, but thankfully, my manager could sense something was amiss, because he started sending me resumes of some of the candidates that made it through the recruiter. 
 
 ...And it was only resumes. And when I looked at them, there weren't any obvious links to portfolios either. Now, resumes are important, but I think many technical writers would agree that some demonstration of your writing ability in the form of a portfolio is equally important. I personally don't like judging So, I went back to my manager, hoping it was a mistake and he just forgot to give them to me. 
 
